Bug 149304 - Stylist does not show upper/lower case font effects
Summary: Stylist does not show upper/lower case font effects
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.5
Keywords: bibisectRequest
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2022-05-26 08:18 UTC by Gabor Kelemen (Collabora)
Modified: 2022-06-06 11:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file with character styles using font effects (16.02 KB, application/vnd.oasis.opendocument.text)
2022-05-26 08:18 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue (140.81 KB, image/png)
2022-05-26 08:19 UTC, Gabor Kelemen (Collabora)
Details
Styles selector in Word 2016 (53.09 KB, image/png)
2022-05-26 08:24 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-05-26 08:18:54 UTC
Created attachment 180395 [details]
Example file with character styles using font effects

Attached document contains 4 custom character styles with different font effects applied: Uppercase, Lowercase, Small caps, Capitalize every word.

The Navigator sidebar does not show these effects on the style names. I think it should.

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 22d7cbc0f0c50c59abca7ab5f7db46e4d0e5f86a
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2022-05-26 08:19:19 UTC
Created attachment 180396 [details]
Screenshot of the issue
Comment 2 Gabor Kelemen (Collabora) 2022-05-26 08:24:03 UTC
Created attachment 180397 [details]
Styles selector in Word 2016

If the file is saved as docx and opened in Word 2016, the ribbon based styles selector does not preview any character effect formatting.
The sidebar based styles selector previews the small caps and uppercase effects, but not the capitalize every word and lower case ones.
Comment 3 Heiko Tietze 2022-05-27 08:15:06 UTC
Confirming with Version: 7.3.3.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.3.3-2
Calc: threaded

All font effects except the case are applied to the Stylist. Version 5.2 does not have this option so I guess it was missed at the implementation. Bisecting might help to find the patch.
Comment 4 Commit Notification 2022-06-04 18:33:54 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6aaa3e617523783b98bc68e260a3a7b4912d11b8

tdf#149304 Stylist does not show upper/lower case font effects

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-06-06 11:33:56 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/f1c695f214620aa11c54dc2e9ee33118c83f0e3f

tdf#149304 Stylist does not show upper/lower case font effects

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.