tdf#149304 Stylist does not show upper/lower case font effects

SvxFont has code to handle these extra features, we just need
to call that

Change-Id: I45691efeeead3ea60ab838eeb081fa5f19a76b90
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135428
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 6aaa3e617523783b98bc68e260a3a7b4912d11b8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135377
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>